Fixed white space on right side on mobile

--- a/src/styles/App/app.scss
+++ b/src/styles/App/app.scss
@@ -10,6 +10,7 @@ html, body {
     font-family: 'Poppins', sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+    overflow-x: hidden;
 }
 
 //Scrollbar Properties
